[metadata]
name = dongtai
version = 1.0.5
description = 洞态IAST基础服务
long_description = file: README.md
url = https://iast.huoxian.cn
author = owefsad
author_email = dongzhiyong@huoxian.cn
license = Apache-2.0 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
    mysqlclient == 1.4.6
    swagger-spec-validator == 2.7.3
    drf_spectacular
		django-modeltranslation
